shmuel 31.08.2020 12:07:03 +0300 - build 757

1. LuaFAR: continued 751.

shmuel 26.08.2020 17:44:40 +0200 - build 756

1. LuaFAR: refactoring.

shmuel 20.08.2020 20:11:34 +0300 - build 755

1. Correct argument safety check in LoadCustomSortMode().

shmuel 20.08.2020 19:28:27 +0300 - build 754

1. Revert changes (except farapi.lua) made in 753.

drkns 19.08.2020 22:34:11 +0100 - build 753

1. Adaptation to Far 3.0.5655.

shmuel 15.08.2020 21:20:57 +0300 - build 752

1. LuaFAR: VS warning + whitespace formatting.

shmuel 01.08.2020 14:45:37 +0200 - build 751

1. LuaFAR: preparations for search in plugins' directories.

shmuel 06.07.2020 11:48:04 +0300 - build 750

1. Minor fix related to build 738.

shmuel 21.05.2020 15:21:20 +0300 - build 749

1. Show traceback when error is thrown from ExitFAR event handler.

zg 18.05.2020 23:28:55 +0300 - build 748

1. откат 747.

zg 18.05.2020 18:30:29 +0300 - build 747

1. experimental "FolderChanged" event.

shmuel 07.05.2020 22:58:33 +0300 - build 746

1. LuaFAR: refactoring.

shmuel 05.05.2020 23:27:35 +0300 - build 745

1. LuaFAR: make tPluginPanelItem.UserData accessible from coroutines (and therefore macros).

shmuel 03.05.2020 14:12:01 +0200 - build 744

1. Minor fix related to build 738.

shmuel 26.04.2020 19:59:14 +0200 - build 743

1. Refactoring.

shmuel 25.04.2020 21:24:46 +0200 - build 742

1. Fix build 741.

shmuel 25.04.2020 18:44:02 +0200 - build 741

1. Minor fixes and refactoring.

shmuel 24.04.2020 21:12:21 +0200 - build 740

1. GCC warnings + micro-refactoring.

shmuel 19.04.2020 11:22:12 +0200 - build 739

1. LuaFAR: fix GCC warnings from appveyor.

shmuel 10.04.2020 21:59:24 +0200 - build 738

1. LuaFAR: update luautf8 library to release 0.1.2.

shmuel 30.03.2020 15:14:49 +0200 - build 737

1. LuaFAR: add file:read("*b") - read binary line.

shmuel 04.03.2020 16:14:42 +0200 - build 736

1. LuaFAR: win.CreateDir() preserves trailing spaces.

shmuel 03.03.2020 13:29:18 +0200 - build 735
